# learning-rust

./: README.md
rust_by_example/: Cargo.toml
rust_by_example/example_01_hello_world/: Cargo.toml
rust_by_example/example_01_hello_world/src/: main.rs
rustlings/: Cargo.toml
rustlings/exercise_00_intro/: Cargo.toml
the_rust_programming_language/: Cargo.toml
the_rust_programming_language/proj_031_variables/: Cargo.toml
the_rust_programming_language/proj_031_variables/src/: main.rs
the_rust_programming_language/proj_032_data_types/: Cargo.toml
the_rust_programming_language/proj_033_functions/: Cargo.toml
the_rust_programming_language/proj_033_functions/src/: main.rs
the_rust_programming_language/proj_034_comments/: Cargo.toml
the_rust_programming_language/proj_034_comments/src/: main.rs
the_rust_programming_language/proj_035_control_flow/: Cargo.toml
the_rust_programming_language/proj_035_control_flow/src/: main.rs
the_rust_programming_language/proj_041_what_is_ownership/: Cargo.toml
the_rust_programming_language/proj_041_what_is_ownership/src/: main.rs
the_rust_programming_language/project_001_variables/: Cargo.toml
the_rust_programming_language/project_002_data_types/: Cargo.toml
the_rust_programming_language/project_002_data_types/src/: main.rs
